# competitive-programming

./: .gitignore  .gitmodules  .main.cpp.swp  .ycm_extra_conf.py  CMakeLists.txt  README.md  game.h  grader.cpp  input.txt  main.cpp  main_backup.cpp  main_old.cpp  run  tile.h  vision.cpp  vision.h
APIO/: 07-Zoo.cpp  19-street_lamps.cpp  APIO 07-Backup.cpp  APIO 10-Commando.cpp  APIO 10-Patrol.cpp  APIO 11-Color.cpp  APIO 13-Robots.cpp  APIO 15-Bridge.cpp  APIO 16-boat.cpp  APIO 16-gap.cpp  APIO 19-bridges.cpp  APIO 19-strange_device.cpp
BOI/: BOI 08-Game.cpp  BOI 08-Gloves.cpp  BOI 09-Subway.cpp  BOI 11-Vikings.cpp  BOI 16-swap.cpp  BOI 17-Cat.cpp  BOI 18-popa.cpp  BOI 19-valley.cpp  BOI12-peaks.cpp  BOI19-nautilus.cpp  BOI19-necklace1.cpp  Balkan 18-minmaxtree.cpp  Baltic 06-Bitwise.cpp  Baltic 06-RLE.cpp  Baltic 07-Fence.cpp  Baltic 07-points.cpp  Baltic 09-Candy.cpp  Baltic 10-Candies.cpp  Baltic 12-Brackets.cpp  Baltic 12-Fire.cpp  Baltic 12-Melody.cpp  Baltic 13-brunhilda.cpp  Baltic 14-sequence.cpp  Baltic 15-fil.cpp  Baltic 16-cities.cpp  Baltic 16-park.cpp  Baltic 17-PoliticalDevelopment.cpp
BkOI/: 11-cmp.cpp  12-BestTeams.cpp  12-FanGroup.cpp  12-ShortestPaths.cpp  16-Conference.cpp  Balkan 11-Trapezoid.cpp  Balkan 17-Cats.cpp  Balkan 17-CityAttractions.cpp  Balkan 18-election.cpp
CCO/: CCO 12-WindsOfWar.cpp  CCO 18-boring.cpp
CEOI/: CEOI 02-Bugs.cpp  CEOI 02-Fence.cpp  CEOI 02-Guards.cpp  CEOI 04-Sweets.cpp  CEOI 05-Depot.cpp  CEOI 05-Net.cpp  CEOI 05-Service.cpp  CEOI 05-Ticket.cpp  CEOI 06-Connect.cpp  CEOI 08-Knights.cpp  CEOI 09-Harbingers.cpp  (+14 more)
(+1189 files in other folders)
